{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 1537,
  "lineage": "cfb32bef-6542-a5c3-64c1-2e3076312a70",
  "resources": [
    {
      "module": "module.eks-monitoring",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "kube-namespace",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "prometheus",
            "metadata": [
              {
                "generation": 0,
                "name": "prometheus",
                "resource_version": "69130",
                "uid": "d05166c7-46e4-4ebb-a489-ecd3b6fdfbf0"
              }
            ],
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "data.aws_eks_cluster.cluster",
            "data.aws_eks_cluster_auth.cluster",
            "data.terraform_remote_state.eks"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712838104:network-acl/acl-03279f42ff117d7ac",
            "default_network_acl_id": "acl-03279f42ff117d7ac",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-03279f42ff117d7ac",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "339712838104",
            "subnet_ids": [
              "subnet-048969fd7775ea556",
              "subnet-05dc556ad99896454",
              "subnet-07baebba8fa24261f",
              "subnet-094a1daaf674e437d",
              "subnet-09ec127f68b6d6f77",
              "subnet-0bd92c39c351103e0"
            ],
            "tags": {
              "Name": "eks-gitlab-vpc-default"
            },
            "tags_all": {
              "Name": "eks-gitlab-vpc-default"
            },
            "vpc_id": "vpc-04995685231f22c83"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712838104:route-table/rtb-0ea76b9b80c7c2b23",
            "default_route_table_id": "rtb-0ea76b9b80c7c2b23",
            "id": "rtb-0ea76b9b80c7c2b23",
            "owner_id": "339712838104",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "eks-gitlab-vpc-default"
            },
            "tags_all": {
              "Name": "eks-gitlab-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-04995685231f22c83"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712838104:security-group/sg-07fa0b02c57686dd9",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-07fa0b02c57686dd9",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "339712838104",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-gitlab-vpc-default"
            },
            "tags_all": {
              "Name": "eks-gitlab-vpc-default"
            },
            "vpc_id": "vpc-04995685231f22c83"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712838104:internet-gateway/igw-046ded18bf6546641",
            "id": "igw-046ded18bf6546641",
            "owner_id": "339712838104",
            "tags": {
              "Name": "eks-gitlab-vpc"
            },
            "tags_all": {
              "Name": "eks-gitlab-vpc"
            },
            "vpc_id": "vpc-04995685231f22c83"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-046ded18bf6546641",
            "id": "r-rtb-0fd007b5347556dc11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fd007b5347556dc1",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712838104:route-table/rtb-05b2f37df7d546359",
            "id": "rtb-05b2f37df7d546359",
            "owner_id": "339712838104",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "eks-gitlab-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Name": "eks-gitlab-vpc-private-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-04995685231f22c83"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712838104:route-table/rtb-0b6166599b93f15c2",
            "id": "rtb-0b6166599b93f15c2",
            "owner_id": "339712838104",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "eks-gitlab-vpc-private-us-east-1b"
            },
            "tags_all": {
              "Name": "eks-gitlab-vpc-private-us-east-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-04995685231f22c83"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712838104:route-table/rtb-0fd007b5347556dc1",
            "id": "rtb-0fd007b5347556dc1",
            "owner_id": "339712838104",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-046ded18bf6546641",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-gitlab-vpc-public"
            },
            "tags_all": {
              "Name": "eks-gitlab-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-04995685231f22c83"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031d6ae6c6f05a01b",
            "route_table_id": "rtb-05b2f37df7d546359",
            "subnet_id": "subnet-09ec127f68b6d6f77"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f5191142fa5392a9",
            "route_table_id": "rtb-0b6166599b93f15c2",
            "subnet_id": "subnet-094a1daaf674e437d"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f17b33c7649417a5",
            "route_table_id": "rtb-05b2f37df7d546359",
            "subnet_id": "subnet-0bd92c39c351103e0"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-047cbca1bf5ea941d",
            "route_table_id": "rtb-0b6166599b93f15c2",
            "subnet_id": "subnet-07baebba8fa24261f"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-027d2ba7b1342c3d4",
            "route_table_id": "rtb-0fd007b5347556dc1",
            "subnet_id": "subnet-048969fd7775ea556"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00bed1c94a27106b9",
            "route_table_id": "rtb-0fd007b5347556dc1",
            "subnet_id": "subnet-05dc556ad99896454"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712838104:subnet/subnet-09ec127f68b6d6f77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ec127f68b6d6f77",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712838104",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-gitlab-vpc-db-us-east-1a",
              "Type": "Private Database Subnets"
            },
            "tags_all": {
              "Name": "eks-gitlab-vpc-db-us-east-1a",
              "Type": "Private Database Subnets"
            },
            "vpc_id": "vpc-04995685231f22c83"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712838104:subnet/subnet-094a1daaf674e437d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-094a1daaf674e437d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712838104",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-gitlab-vpc-db-us-east-1b",
              "Type": "Private Database Subnets"
            },
            "tags_all": {
              "Name": "eks-gitlab-vpc-db-us-east-1b",
              "Type": "Private Database Subnets"
            },
            "vpc_id": "vpc-04995685231f22c83"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712838104:subnet/subnet-0bd92c39c351103e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd92c39c351103e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712838104",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-gitlab-vpc-private-us-east-1a",
              "Type": "private-subnets",
              "kubernetes.io/cluster/ekscluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "eks-gitlab-vpc-private-us-east-1a",
              "Type": "private-subnets",
              "kubernetes.io/cluster/ekscluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-04995685231f22c83"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712838104:subnet/subnet-07baebba8fa24261f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07baebba8fa24261f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712838104",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-gitlab-vpc-private-us-east-1b",
              "Type": "private-subnets",
              "kubernetes.io/cluster/ekscluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "eks-gitlab-vpc-private-us-east-1b",
              "Type": "private-subnets",
              "kubernetes.io/cluster/ekscluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-04995685231f22c83"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712838104:subnet/subnet-048969fd7775ea556",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-048969fd7775ea556",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339712838104",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-gitlab-vpc-public-us-east-1a",
              "Type": "Public Subnets",
              "kubernetes.io/cluster/ekscluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks-gitlab-vpc-public-us-east-1a",
              "Type": "Public Subnets",
              "kubernetes.io/cluster/ekscluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04995685231f22c83"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712838104:subnet/subnet-05dc556ad99896454",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05dc556ad99896454",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339712838104",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-gitlab-vpc-public-us-east-1b",
              "Type": "Public Subnets",
              "kubernetes.io/cluster/ekscluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks-gitlab-vpc-public-us-east-1b",
              "Type": "Public Subnets",
              "kubernetes.io/cluster/ekscluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04995685231f22c83"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712838104:vpc/vpc-04995685231f22c83",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03279f42ff117d7ac",
            "default_route_table_id": "rtb-0ea76b9b80c7c2b23",
            "default_security_group_id": "sg-07fa0b02c57686dd9",
            "dhcp_options_id": "dopt-08a726ac35ffadb43",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04995685231f22c83",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ea76b9b80c7c2b23",
            "owner_id": "339712838104",
            "tags": {
              "Name": "eks-gitlab-vpc"
            },
            "tags_all": {
              "Name": "eks-gitlab-vpc"
            }
          }
        }
      ]
    }
  ]
}